--- a/templates/assignments.html
+++ b/templates/assignments.html
@@ -3,136 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="static/style.css">
     <title>The BuzzBot</title>
-    <style>
-
-        /*@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');*/
-        @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-
-        body {
-            font-family: 'Lato'; /* This sets the font for all text unless overridden */
-            line-height: 1.6;
-            overflow-x: hidden; /* Moved from html to body for consistency */
-            padding-left: 250px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-
-        th, td {
-            border: 1px solid black;
-            padding: 8px;
-        }
-
-        th {
-            background-color: #f0f0f0;
-        }
-
-        .date-header {
-            margin-top: 20px;
-        }
-
-        .pale-green {
-            background-color: #ccffcc;
-        }
-
-        /* Pale green background */
-        .pale-red {
-            background-color: #ffcccc;
-        }
-
-        /* Pale red background */
-
-        .color-key {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            padding: 10px;
-        }
-
-        .key-square {
-            width: 20px;
-            height: 20px;
-            display: inline-block;
-        }
-
-        .disclaimer-banner {
-            background-color: #ffffcc; /* Light yellow background for visibility */
-            color: #333; /* Dark text for contrast */
-            padding: 10px;
-            text-align: center;
-            border-bottom: 1px solid #ccc; /* subtle separation from the rest of the page */
-            font-size: 14px; /* Adjust based on preference */
-        }
-
-        .bar {
-            position: relative;
-            top: 0;
-            left: 0;
-
-            width: 100%;
-            padding: 25px 0;
-
-            background-color: #add8e6; /* Pastel blue */
-            color: black;
-
-            font-family: Kode-Mono;
-            font-size: 18px;
-        }
-
-        .bar_content {
-            display: block; /* Important to give the content a width */
-
-            width: 100%;
-            transform: translateX(100%); /* Animation start out of the screen */
-
-            /* Add the animation */
-            animation: move 30s linear infinite /* infinite make reapeat the animation indefinitely */;
-        }
-
-        /* Create the animation */
-        @keyframes move {
-            to {
-                transform: translateX(-100%);
-            }
-        }
-
-        .sidebar {
-            position: fixed; /* Or `absolute` if you prefer */
-            left: 0;
-            top: 0;
-            width: 200px; /* Adjust width as needed */
-            height: 100%;
-            overflow-y: auto; /* Enable scrolling if the content is too long */
-            background-color: #f0f0f0; /* Light grey background */
-            padding: 20px;
-        }
-
-
-    </style>
 </head>
 <body>
 
-<h1>EUMHC BuzzBot Umpiring Assignments</h1>
-
+<div id="top">
+    <h1>EUMHC BuzzBot Umpiring Assignments</h1>
+</div>
 A program by Callum Alexander<br>
 
 <em>"If the EUHC Cinematic Universe allowed Jack Mead, Ed Bury, and I to do the umpiring assignments for EUMHC together
     at the same time. Then times that by 10 million. That is The BuzzBot"</em>
 
 <div class="bar">
-        <span class="bar_content" id="tagline">
-            BuzzBot says, "{{ taglines[0] }}"
-        </span>
+            <span class="bar_content" id="tagline">
+                BuzzBot says, "{{ taglines[0] }}"
+            </span>
 </div>
 
 
 <div class="sidebar">
 
     <h4>Quick Navigation</h4>
+
+    <a href="#top">Back to the top</a>
+    <br><br>
 
     {% for date, games in games_by_date.items() %}
     <a href="#{{ date.strftime('%Y-%m-%d') }}">
@@ -188,6 +84,11 @@ A program by Callum Alexander<br>
     {% endfor %}
     </tbody>
 </table>
+
+<div id="timeline-container">
+    <div id="timeline"></div>
+</div>
+
 <hr>
 {% else %}
 <h2>No games scheduled.</h2>
