--- a/templates/error.html
+++ b/templates/error.html
@@ -15,7 +15,10 @@
 
 <h3>The error message I was talking about</h3>
 
-<p>{{ error_message }}</p>
+<div class="error-message">
+    <p>{{ error_message }}</p>
+</div>
+
 <a href="/">Go Back to Home</a>
 </body>
 </html>
