--- a/templates/error.html
+++ b/templates/error.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
-    <link rel="stylesheet" type="text/css" href="static/style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
 
     <style>
         body {
